[gd_scene load_steps=17 format=2]

[ext_resource path="res://screens/titleScreenManager.gd" type="Script" id=1]
[ext_resource path="res://sprites/images/blueBackground.png" type="Texture" id=2]
[ext_resource path="res://sprites/images/cloud.png" type="Texture" id=3]
[ext_resource path="res://sprites/images/sun.png" type="Texture" id=4]
[ext_resource path="res://sprites/images/tree.png" type="Texture" id=5]
[ext_resource path="res://sprites/images/grass.png" type="Texture" id=6]
[ext_resource path="res://sprites/images/girl1.png" type="Texture" id=7]
[ext_resource path="res://sprites/images/girl2.png" type="Texture" id=8]
[ext_resource path="res://sprites/images/boy.png" type="Texture" id=9]
[ext_resource path="res://sprites/images/toy.png" type="Texture" id=10]
[ext_resource path="res://sprites/texts/QuizTEA.png" type="Texture" id=11]
[ext_resource path="res://sprites/images/whiteBackground.png" type="Texture" id=12]
[ext_resource path="res://sprites/texts/Jogar.png" type="Texture" id=13]
[ext_resource path="res://sprites/texts/instructions.png" type="Texture" id=14]
[ext_resource path="res://sprites/texts/Sobre.png" type="Texture" id=15]
[ext_resource path="res://transition.tres" type="Animation" id=16]

[node name="Node2D" type="Node2D"]
position = Vector2( 309.423, 476.442 )
script = ExtResource( 1 )

[node name="background" type="ColorRect" parent="."]
self_modulate = Color( 1, 1, 1, 0.972549 )
margin_left = -310.0
margin_top = -477.0
margin_right = 715.0
margin_bottom = 123.0
color = Color( 0.607843, 0.835294, 0.921569, 1 )

[node name="paintedBackground" type="Sprite" parent="."]
position = Vector2( 202.307, -173.184 )
scale = Vector2( 2.53452, 0.581243 )
texture = ExtResource( 2 )

[node name="cloud1" type="Sprite" parent="."]
position = Vector2( -209.101, -407.09 )
scale = Vector2( 0.453492, 0.476212 )
texture = ExtResource( 3 )

[node name="cloud2" type="Sprite" parent="."]
position = Vector2( 308.875, -423.701 )
scale = Vector2( 0.431906, 0.453545 )
texture = ExtResource( 3 )

[node name="cloud4" type="Sprite" parent="."]
position = Vector2( 136.147, -323.543 )
scale = Vector2( 0.381013, 0.400102 )
texture = ExtResource( 3 )

[node name="cloud3" type="Sprite" parent="."]
position = Vector2( 648.013, -345.514 )
scale = Vector2( 0.334746, 0.351517 )
texture = ExtResource( 3 )

[node name="sun" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0.831373 )
position = Vector2( 1.23616, -398.065 )
scale = Vector2( 1.0626, 1.03598 )
texture = ExtResource( 4 )

[node name="tree" type="Sprite" parent="."]
editor/display_folded = true
position = Vector2( -15.6238, -105.146 )
scale = Vector2( 0.216024, 0.272734 )
texture = ExtResource( 5 )

[node name="grass" type="Sprite" parent="tree"]
position = Vector2( -620.853, 707.168 )
scale = Vector2( 0.559431, 0.600513 )
texture = ExtResource( 6 )

[node name="grass2" type="Sprite" parent="tree"]
position = Vector2( 506.703, 707.168 )
scale = Vector2( 0.559431, 0.600513 )
texture = ExtResource( 6 )

[node name="grass3" type="Sprite" parent="tree"]
position = Vector2( 1871.97, 707.168 )
scale = Vector2( 0.559431, 0.600513 )
texture = ExtResource( 6 )

[node name="grass4" type="Sprite" parent="tree"]
position = Vector2( 2640, 707.168 )
scale = Vector2( 0.559431, 0.600513 )
texture = ExtResource( 6 )

[node name="kid" type="Sprite" parent="."]
position = Vector2( -241.57, 38.8711 )
scale = Vector2( 0.197812, 0.194888 )
texture = ExtResource( 7 )

[node name="kid2" type="Sprite" parent="."]
position = Vector2( -120.123, -11.7224 )
scale = Vector2( 0.213833, 0.197288 )
texture = ExtResource( 8 )

[node name="kid3" type="Sprite" parent="."]
position = Vector2( 114.912, 40.4555 )
scale = Vector2( 0.198012, 0.202244 )
texture = ExtResource( 9 )

[node name="toy" type="Sprite" parent="."]
position = Vector2( 270.154, 53.312 )
scale = Vector2( 0.273314, 0.273314 )
texture = ExtResource( 10 )

[node name="QuizTEA" type="Sprite" parent="."]
position = Vector2( 465.918, -358.605 )
scale = Vector2( 0.433623, 0.433623 )
texture = ExtResource( 11 )

[node name="option1" type="ColorRect" parent="."]
editor/display_folded = true
margin_left = 249.122
margin_top = -251.791
margin_right = 701.122
margin_bottom = -189.791
color = Color( 1, 1, 1, 0.478431 )

[node name="Sprite" type="Sprite" parent="option1"]
self_modulate = Color( 1, 1, 1, 0.780392 )
position = Vector2( 227.674, 29.9532 )
scale = Vector2( 0.444939, 0.154089 )
texture = ExtResource( 12 )

[node name="play" type="TouchScreenButton" parent="option1"]
position = Vector2( 148.898, 3.25494 )
scale = Vector2( 0.28, 0.28 )
normal = ExtResource( 13 )

[node name="instructions" type="TouchScreenButton" parent="."]
position = Vector2( 390.74, -183.674 )
scale = Vector2( 0.269, 0.269 )
normal = ExtResource( 14 )

[node name="option3" type="ColorRect" parent="."]
editor/display_folded = true
margin_left = 249.122
margin_top = -129.204
margin_right = 701.121
margin_bottom = -67.2042
color = Color( 1, 1, 1, 0.478431 )

[node name="sprite3" type="Sprite" parent="option3"]
self_modulate = Color( 1, 1, 1, 0.780392 )
position = Vector2( 227.837, 31.4136 )
scale = Vector2( 0.442101, 0.154089 )
texture = ExtResource( 12 )

[node name="about" type="TouchScreenButton" parent="option3"]
position = Vector2( 173.272, 7.6499 )
scale = Vector2( 0.264, 0.264 )
normal = ExtResource( 15 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("")
anims/transition = ExtResource( 16 )

[connection signal="pressed" from="option1/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="instructions" to="." method="_on_instructions_pressed"]
[connection signal="pressed" from="option3/about" to="." method="_on_about_pressed"]
